<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Contact List</string>
	<string name="title_activity_contact">ContactActivity</string>
	<string name="contact_title">Contacts</string>
	<string name="description">Image of contact</string>
	<string name="individual_contact">Contact Information</string>
	<string name="new_contact">Add New Contact</string>
	<string name="first_name">First Name</string>
	<string name="last_name">Last Name</string>
	<string name="phone_number">Phone Number</string>
	<string name="photo">Photo</string>

</resources>